--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           Riempi i Cuori!
           <img src="assets/heart-purple.png" class="emoji-img" alt="cuore" />
         </h2>
-        <p class="pixel-subtitle">Clicca ogni cuore per riempirlo d'amore</p>
+        <p class="pixel-subtitle">Clicca i cuori per riempirli del tuo amore</p>
         <div class="hearts-game" id="heartsGame">
           <div class="heart-pixel" data-filled="false">
             <div class="heart-empty">
@@ -120,7 +120,7 @@
     <div class="scene" id="scene4">
       <div class="content-container">
         <h2 class="pixel-title">
-          Un Amico Speciale!
+          Un Micetto!!
           <img src="assets/heart-purple.png" class="emoji-img" alt="cuore" />
         </h2>
         <p class="pixel-subtitle">Questo gattino ha un messaggio per te...</p>
@@ -129,7 +129,7 @@
             <img src="assets/cat.png" alt="Pixel Cat" class="cat-image" />
           </div>
           <div class="meow-popup hidden" id="meowPopup">
-            Meow!
+            Meoww! -ω-
             <img
               src="assets/cat-emoji.png"
               class="emoji-img-small"
