--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Stelline animate background -->
     <div class="stars-container" id="starsContainer"></div>
 
-    <!-- Scena 1: Busta animata -->
+    <!-- Scena 1: Busta animata! -->
     <div class="scene active" id="scene1">
       <div class="envelope-container">
         <div class="envelope-pixel" id="envelopePixel">
